Wed Dec 31 07:13:25 2003  Chad Elliott  <elliott_c@ociweb.com>

        * ace/TMCast/MTQueue.hpp:

          Added #include for ace/os_include/sys/os_types.h to get the
          definition of size_t and changed references to std::size_t to
          size_t.

        * ace/config-win32-msvc.h:

          Added a #pragma waring to disable warning #4800 which is a
          conversion of integer to boolean warning.

Wed Dec 31 06:46:36 2003  Chad Elliott  <elliott_c@ociweb.com>

        * apps/JAWS3/jaws3.mwc:

          Removed this file.  It is not necessary for two reasons.  1) The
          jaws3 project will be part of the "apps" workspace.  2) If a
          workspace with just jaws3 is desired, one could run mwc.pl in the
          apps/JAWS3 directory to obtain the same results as the removed
          mwc file.

Wed Dec 31 12:30:11 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Export/dll.h:
          Removed not needed ; to fix Tru64 warning

Tue Dec 30 18:14:39 2003  Steve Huston  <shuston@riverace.com>

        * ace/OS_TLI.inl (t_alloc): For XPG5, the t_alloc() return type
          changed from char* to void*, so using ACE_OSCALL_RETURN doesn't
          work. Use ACE_OSCALL to control the type and return more closely.

        * ace/Timer_List_T.cpp: Add #include "ace/Guard_T.h to get ACE_Guard.

        * apps/Gateway/Gateway/Gateway.cpp: Added #include "ace/OS_NS_stdio.h"
          so Visual Age C++ can see ACE_OS::sprintf().

        * apps/Gateway/Gateway/gatewayd.cpp: Add #include "ace/OS_NS_unistd.h"
          so Visual Age C++ can see ACE_OS::access().

        * apps/Gateway/Peer/Options.cpp: Added #include "ace/OS_NS_stdlib.h"
          so Visual Age C++ can see ACE_OS::exit(), getenv(), and atoi().
          Added #include "ace/OS_Memory.h" to get ACE_NEW_RETURN.

        * apps/Gateway/Peer/Peer.cpp: Added #include "ace/OS_NS_stdio.h"
          so Visual Age C++ can see ACE_OS::sprintf() and rewind(). Added